--- a/requirements.txt
+++ b/requirements.txt
@@ -12,14 +12,17 @@ httpcore==1.0.5
 httpx==0.27.2
 idna==3.8
 iniconfig==2.0.0
+loguru==0.7.3
 packaging==24.1
 passlib==1.7.4
 pluggy==1.5.0
 pydantic==2.8.2
+pydantic-settings==2.7.1
 pydantic_core==2.20.1
 PyMySQL==1.1.1
 pytest==8.3.3
 python-decouple==3.8
+python-dotenv==1.0.1
 requests==2.32.3
 sniffio==1.3.1
 starlette==0.38.4
