--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,10 @@ aiomysql==0.2.0
 annotated-types==0.7.0
 anyio==4.4.0
 certifi==2024.8.30
+cffi==1.17.1
 charset-normalizer==3.3.2
 click==8.1.7
+cryptography==44.0.0
 dnspython==2.6.1
 email_validator==2.2.0
 fastapi==0.112.3
@@ -16,11 +18,13 @@ loguru==0.7.3
 packaging==24.1
 passlib==1.7.4
 pluggy==1.5.0
+pycparser==2.22
 pydantic==2.8.2
 pydantic-settings==2.7.1
 pydantic_core==2.20.1
 PyMySQL==1.1.1
 pytest==8.3.3
+pytest-asyncio==0.25.2
 python-decouple==3.8
 python-dotenv==1.0.1
 requests==2.32.3
