--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,7 @@ pycparser==2.22
 pydantic==2.8.2
 pydantic-settings==2.7.1
 pydantic_core==2.20.1
+PyJWT==2.10.1
 PyMySQL==1.1.1
 pytest==8.3.3
 pytest-asyncio==0.25.2
