--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ charset-normalizer==3.3.2
 click==8.1.7
 cryptography==44.0.0
 dnspython==2.6.1
+ecdsa==0.19.0
 email_validator==2.2.0
 fastapi==0.112.3
 h11==0.14.0
@@ -19,6 +20,7 @@ loguru==0.7.3
 packaging==24.1
 passlib==1.7.4
 pluggy==1.5.0
+pyasn1==0.6.1
 pycparser==2.22
 pydantic==2.8.2
 pydantic-settings==2.7.1
@@ -29,7 +31,10 @@ pytest==8.3.3
 pytest-asyncio==0.25.2
 python-decouple==3.8
 python-dotenv==1.0.1
+python-jose==3.3.0
 requests==2.32.3
+rsa==4.9
+six==1.17.0
 sniffio==1.3.1
 starlette==0.38.4
 typing_extensions==4.12.2
