--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,18 @@
-aiomcache==0.8.2
 aiomysql==0.2.0
+aioredis==2.0.1
+amqp==5.3.1
 annotated-types==0.7.0
 anyio==4.4.0
+async-timeout==5.0.1
+billiard==4.2.1
+celery==5.4.0
 certifi==2024.8.30
 cffi==1.17.1
 charset-normalizer==3.3.2
 click==8.1.7
+click-didyoumean==0.3.1
+click-plugins==1.1.1
+click-repl==0.3.0
 cryptography==44.0.0
 dnspython==2.6.1
 ecdsa==0.19.0
@@ -16,10 +23,12 @@ httpcore==1.0.5
 httpx==0.27.2
 idna==3.8
 iniconfig==2.0.0
+kombu==5.4.2
 loguru==0.7.3
 packaging==24.1
 passlib==1.7.4
 pluggy==1.5.0
+prompt_toolkit==3.0.50
 pyasn1==0.6.1
 pycparser==2.22
 pydantic==2.8.2
@@ -29,14 +38,19 @@ PyJWT==2.10.1
 PyMySQL==1.1.1
 pytest==8.3.3
 pytest-asyncio==0.25.2
+python-dateutil==2.9.0.post0
 python-decouple==3.8
 python-dotenv==1.0.1
 python-jose==3.3.0
+redis==5.2.1
 requests==2.32.3
 rsa==4.9
 six==1.17.0
 sniffio==1.3.1
 starlette==0.38.4
 typing_extensions==4.12.2
+tzdata==2025.1
 urllib3==2.2.2
 uvicorn==0.30.6
+vine==5.1.0
+wcwidth==0.2.13
