--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ annotated-types==0.7.0
 anyio==4.4.0
 async-timeout==5.0.1
 billiard==4.2.1
+cachetools==5.5.2
 celery==5.4.0
 certifi==2024.8.30
 cffi==1.17.1
@@ -14,6 +15,8 @@ click-didyoumean==0.3.1
 click-plugins==1.1.1
 click-repl==0.3.0
 cryptography==44.0.0
+cssselect==1.2.0
+cssutils==2.11.1
 dnspython==2.6.1
 ecdsa==0.19.0
 email_validator==2.2.0
@@ -23,11 +26,16 @@ httpcore==1.0.5
 httpx==0.27.2
 idna==3.8
 iniconfig==2.0.0
+Jinja2==3.1.5
 kombu==5.4.2
 loguru==0.7.3
+lxml==5.3.1
+MarkupSafe==3.0.2
+more-itertools==10.6.0
 packaging==24.1
 passlib==1.7.4
 pluggy==1.5.0
+premailer==3.10.0
 prompt_toolkit==3.0.50
 pyasn1==0.6.1
 pycparser==2.22
