--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ click-repl==0.3.0
 cryptography==44.0.0
 cssselect==1.2.0
 cssutils==2.11.1
+Deprecated==1.2.18
 dnspython==2.6.1
 ecdsa==0.19.0
 email_validator==2.2.0
@@ -28,6 +29,7 @@ idna==3.8
 iniconfig==2.0.0
 Jinja2==3.1.5
 kombu==5.4.2
+limits==4.0.1
 loguru==0.7.3
 lxml==5.3.1
 MarkupSafe==3.0.2
@@ -54,6 +56,7 @@ redis==5.2.1
 requests==2.32.3
 rsa==4.9
 six==1.17.0
+slowapi==0.1.9
 sniffio==1.3.1
 starlette==0.38.4
 typing_extensions==4.12.2
@@ -62,3 +65,4 @@ urllib3==2.2.2
 uvicorn==0.30.6
 vine==5.1.0
 wcwidth==0.2.13
+wrapt==1.17.2
