--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ amqp==5.3.1
 annotated-types==0.7.0
 anyio==4.4.0
 async-timeout==5.0.1
+bcrypt==4.3.0
 billiard==4.2.1
 cachetools==5.5.2
 celery==5.4.0
@@ -35,7 +36,6 @@ lxml==5.3.1
 MarkupSafe==3.0.2
 more-itertools==10.6.0
 packaging==24.1
-passlib==1.7.4
 pluggy==1.5.0
 premailer==3.10.0
 prompt_toolkit==3.0.50
