--- a/requirements.txt
+++ b/requirements.txt
@@ -38,6 +38,8 @@ more-itertools==10.6.0
 packaging==24.1
 pluggy==1.5.0
 premailer==3.10.0
+prometheus-fastapi-instrumentator==7.1.0
+prometheus_client==0.23.1
 prompt_toolkit==3.0.50
 pyasn1==0.6.1
 pycparser==2.22
